<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"/>

        <EditText
            android:id="@+id/iniNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_nama"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jenis_kelamin"
                android:textSize="17sp"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                android:id="@+id/iniJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/iniPria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pria"/>

                <RadioButton
                    android:id="@+id/iniWanita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wanita"/>
            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/iniNoHandphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/no_handphone_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iniJenisKelamin"
            android:inputType="phone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="3dp">

        <EditText
            android:id="@+id/iniTanggal"
            android:layout_width="200dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:hint="@string/hari_ini"/>

        <Button
            android:id="@+id/btnTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_tanggal"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="3dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rute"
                android:textSize="17sp"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                android:id="@+id/iniRute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/iniJakartaBandung"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jakarta_bandung"/>

                <RadioButton
                    android:id="@+id/iniBandungJakarta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bandung_jakarta"/>
            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/btnDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
           android:layout_marginTop="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>